# tirpc-rs

./: Cargo.toml  README.md
calltuple/: Cargo.toml
calltuple/src/: lib.rs
client/: Cargo.toml
client/src/: lib.rs
def/: Cargo.toml
def/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
rpcclient/: Cargo.toml
rpcclient/src/: lib.rs
rpcserver/: Cargo.toml
rpcserver/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs
tuplecaller/: Cargo.toml
tuplecaller/src/: lib.rs
