
[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
bincode = "1.3.3"
macros = { path = "../macros" }
serde = { version = "1.0.159", features = [ "derive" ] }
rpcserver = { path = "../rpcserver" }
rpcclient = { path = "../rpcclient" }
def = { path = "../def" }